--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "typeit": "^8.7.1",
+    "typeit-react": "^2.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
